--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
         "php": "^7.2",
         "ext-pcntl": "*",
         "ext-rdkafka": "*",
-        "phpunit/phpunit": "^8.0",
         "psr/log": "^1.0",
         "symfony/config": "^3.4|^4.1",
         "symfony/console": "^3.4|^4.1",
@@ -26,6 +25,7 @@
     },
     "require-dev": {
         "doctrine/coding-standard": "^5.0",
+        "phpunit/phpunit": "^7.4|^8.0",
         "kwn/php-rdkafka-stubs": "^1.0",
         "phpstan/phpstan": "^0.10.3",
         "phpstan/phpstan-phpunit": "^0.10.0",
